Use Set.copyOf
Co-authored-by: Thomas Gran <t2gran@gmail.com>